# help_bulat

./: .gitignore  CMakeLists.txt  Deque.cpp
Deque/: Deque.hpp  TestDeque.cpp  TestDeque.hpp  deck2.cpp  main.cpp
List/: SList.cpp  TestList.cpp  TestList.hpp  list.hpp  main.cpp
Tree/: main.cpp  main2.cpp  main3.cpp  mainnew.cpp  mainnew_rand.cpp  nastya.cpp
list_class/: list_class.cpp  list_class.hpp  main.cpp  main2.cpp
